# beep

./: CMakeLists.txt  LICENSE  README.md
beep/: CMakeLists.txt
beep/backend/: CMakeLists.txt
beep/backend/include/: beep_backend.h
beep/backend/src/: Beeper.cpp  Beeper.h  PaException.cpp  beep_backend.cpp
beep/include/: beep.h
beep/src/: BeepCollector.cpp  BeepCollector.h  BeepMessage.h  BeepSynth.cpp  BeepSynth.h  Beeper.cpp  Beeper.h  Common.h  Envelope.cpp  Envelope.h  Gain.cpp  Gain.h  PaException.h  beep.cpp
beep/src/oscillators/: NoiseOscillator.cpp  NoiseOscillator.h  Oscillator.cpp  Oscillator.h  SineOscillator.cpp  SineOscillator.h
beep/src/voices/: NoiseVoice.cpp  NoiseVoice.h  OscillatorVoice.cpp  OscillatorVoice.h  SineVoice.cpp  SineVoice.h  Voice.h
beep/test/: test_dummy.cpp
beep_macros/: CMakeLists.txt
beep_macros/include/: beep_macros.h
beep_test_app/: CMakeLists.txt  main.cpp
beepc/: CMakeLists.txt
beepc/include/: beepc.h
beepc/src/: BeepMessage.h  BeepQueue.cpp  BeepQueue.h  BeepSynth.cpp  BeepSynth.h  Beeper.cpp  Beeper.h  Common.h  beepc.cpp
beepc/src/oscillators/: NoiseOscillator.h  Oscillator.cpp  SineOscillator.cpp  SineOscillator.h
beepc/src/voices/: OscillatorVoice.h  Voice.h
beeppp/: CMakeLists.txt
beeppp/include/: beeppp.h
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt
examples/c_app/: CMakeLists.txt  main.c
examples/cpp_app/: CMakeLists.txt  main.cpp
